# action_guardrail

./: .dockerignore  Dockerfile  Dockerfile.lambda  README.md  deploy-aws.ps1  deploy.ps1  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: test.yml
app/: audit.py  config.py  evaluator.py  hitl.py  lambda_handler.py  logging_setup.py  main.py  models.py  notifications.py  policy_loader.py  storage.py
app/static/: dashboard.html  landing.html
deploy/: smoke_test.ps1  smoke_test_aws.ps1  smoke_test_aws_fixed.ps1  smoke_test_hf.ps1
docs/: SOLUTION.md  deployment.md  runbook.md
harness/: agent.py  guardrail_client.py  run_all.py  run_scenarios.py  scenarios.py  tools.py
mcp_server/: README.md  server.py  test_server.py
policies/: example_rules.yaml
scripts/: review_pending.py
src/action_guardrail/: __init__.py  evaluator.py  policy_loader.py
tests_lib/: test_library.py
