[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "action-guardrail"
version = "0.1.0"
description = "Policy evaluation layer for AI agent tool calls"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Arya", email = "aryahari1804@gmail.com" },
]
keywords = ["ai", "guardrail", "policy", "safety", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/Arya1718/action_guardrail"
Documentation = "https://github.com/Arya1718/action_guardrail"
Repository = "https://github.com/Arya1718/action_guardrail"

[tool.setuptools.packages.find]
where = ["src"]
include = ["action_guardrail"]
